--- a/.github/workflows/log-message.yml
+++ b/.github/workflows/log-message.yml
@@ -1,7 +1,8 @@
 name: GitHub Action Demo
+on: [pull_request]
 
 jobs:
-  Log-Message:
+  build:
     runs-on: ubuntu-latest
     steps:
       - run: echo "Hello from small-project"
