--- a/.github/workflows/aws.yml
+++ b/.github/workflows/aws.yml
@@ -5,4 +5,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Hello from aws"
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::822112283600:role/CnasTargetRole
